<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditFriendActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar" >

            <ImageView
                android:id="@+id/backButton"
                style="@style/backButton"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/des_btn_back" />

            <TextView
                android:id="@+id/toolbarTitle"
                style="@style/tittleToolbar"
                android:text="@string/edit_friend" />

            <ImageView
                android:id="@+id/saveButton"
                style="@style/iconToolbar"
                android:src="@drawable/ic_save"
                android:contentDescription="@string/des_btn_save" />
        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_360sdp"
            android:gravity="center">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_friend"
                android:src="@drawable/ic_profile_placeholder"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/cameraButton"
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginStart="@dimen/_250sdp"
                android:layout_marginTop="@dimen/_290sdp"
                android:background="@drawable/bg_button_rounded"
                android:contentDescription="@string/des_btn_camera"
                android:src="@drawable/ic_camera"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    style="@style/displayTheme"
                    android:drawableStart="@drawable/ic_person"
                    android:hint="@string/name_hint"
                    android:text=""
                    tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSchool"
                    style="@style/displayTheme"
                    android:drawableStart="@drawable/ic_school"
                    android:hint="@string/school_hint"
                    android:text=""
                    tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    style="@style/displayTheme"
                    android:drawableStart="@drawable/ic_call"
                    android:hint="@string/phone_number"
                    android:text=""
                    tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
