<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/cardTheme"
    android:layout_width="@dimen/_130sdp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    card_view:cardCornerRadius="@dimen/_5sdp"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:id="@+id/img_news"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:contentDescription="@string/profile_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile_placeholder"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            style="@style/subCardTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/_13sdp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp">

            <TextView
                android:id="@+id/tv_news_title"
                style="@style/textTheme"
                android:text="@string/name"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_news_description"
                style="@style/textTheme"
                android:text="@string/school_hint"
                android:textSize="@dimen/_10ssp"/>

            <TextView
                android:id="@+id/tv_friend_bio"
                style="@style/textTheme"
                android:visibility="invisible"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
